--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "blockly": "^6.20210701.0"
+    "blockly": "^6.20210701.0",
+    "unishox2.siara.cc": "^1.0.1"
   }
 }
