--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blockly/theme-highcontrast": "^2.0.3",
+    "@blockly/theme-modern": "^2.1.28",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.0",
     "react-scripts": "5.0.0",
+    "react-split-grid": "^1.0.4",
     "sass": "^1.45.1",
     "use-deep-compare-effect": "^1.8.1",
     "web-vitals": "^2.1.4"
