--- a/client/package.json
+++ b/client/package.json
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "import-all.macro": "^3.1.0"
   }
 }
