--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier **/*.{js,jsx} --check",
+    "format:fix": "prettier **/*.{js,jsx} --write"
   },
   "eslintConfig": {
     "extends": [
