--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier **/*.{js,jsx} --check",
-    "format:fix": "prettier **/*.{js,jsx} --write"
+    "format": "prettier . --check",
+    "format:fix": "prettier . --write"
   },
   "eslintConfig": {
     "extends": [
