--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "gen-exercises": "node ./scripts/generate-exercises.js ",
+    "start": "npm run gen-exercises && react-scripts start",
+    "build": "npm run gen-exercises && react-scripts build",
+    "test": "npm run gen-exercises && react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
