use local versions of blockly and zero md from npm instead of mdn

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "blockly": "^7.20211209.2",
-    "unishox2.siara.cc": "^1.0.1"
+    "unishox2.siara.cc": "^1.0.1",
+    "zero-md": "^2.4.0"
   }
 }
